--- a/accueil.css
+++ b/accueil.css
@@ -1,305 +1,81 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Gotham', sans-serif;
-}
-
 body {
-  background: url(sport3.jpg);
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
-  position: relative;
-  font-family: sans-serif;
+  background: url(images/fond.png) no-repeat center center;
+  background-size: cover;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
-.search-container {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  top: 10px;
-  z-index: 5;
+
+.navbar {
+  background-color: #00bfff;
 }
 
-.search {
-  position: relative;
-  display: inline-block;
-}
-
-.search input {
-  width: 300px;
-  border: 2px solid green;
-  padding: 10px;
-  border-radius: 30px;
-}
-
-.search i {
-  position: absolute;
-  right: 5px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-h1 {
-  font-size: 45pt;
-  margin-bottom: 10px;
-  color: green; 
-  text-align: center;
-  margin: 2rem 0.5rem 0;
-}
-
-h2 {
-  color: black; 
-  text-align: center;
-  margin: 2rem 0 4rem 0;
-}
-
-nav {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: white;
-  z-index: 1;
-}
-
-main {
-  width: 100%;
-  line-height: 2rem;
-  font-size: 20px;
-  height: 100vh;
-  overflow: auto;
-  padding: 2rem 5vw;
-  text-align: justify;
-}
-
-main::-webkit-scrollbar {
-  background-color: #dedede;
-  width: 0.5rem;
-}
-
-main::-webkit-scrollbar-thumb {
-  background-color: #757575;
-}
-
-.nav-latteral {
-  position: absolute;
-  top: 0;
-  left: -100%;
-  background:  url(sport5.jpg);
-  z-index: 3;
-  height: 100vh;
-  width: max-content;
-  transition: all 0.1s ease;
-}
-
-#nav-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.6);
-  z-index: 2;
-  display: none;
-}
-
-#nav-wrapper.active {
-  display: block;
-}
-
-#nav-close {
-  margin-bottom: 4rem;
-}
-
-.nav-links {
-  padding: 1rem 6rem 1rem 3rem;
+.navbar-brand {
+  font-weight: bold;
+  color: #5e42a6;
 }
 
 .nav-link {
-  cursor: pointer;
-  font-size: 25px;
-  margin-bottom: 50px;
-  display: flex;
-  align-items: center;
+  color: #5e42a6 !important;
 }
 
 .nav-link:hover {
-  color: green;
+  color: #ffd700 !important;
 }
 
-.nav-link ion-icon {
-  margin-right: 15px;
+.form-inline .btn {
+  background-color: #5e42a6;
+  color: #fff;
 }
 
-.nav-button {
-  transition: all 0.2s ease;
+.form-inline .btn:hover {
+  background-color: #ffd700;
 }
 
-.nav-button {
-  font-size: 40px;
-  cursor: pointer;
-  height: 50px;
-  width: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+h1.display-4 {
+  color: #5e42a6;
+}
+
+h2 {
+  color: #00bfff;
+}
+
+.carousel-item img {
+  object-fit: cover;
+  height: 400px;
+}
+
+.carousel-caption h5 {
+  background-color: rgba(94, 66, 166, 0.7);
+  padding: 10px;
   border-radius: 5px;
 }
 
-.nav-button:hover {
-  color: white;
-  background-color: green;
+.carousel-caption p {
+  background-color: rgba(0, 191, 255, 0.7);
+  padding: 5px;
+  border-radius: 5px;
 }
 
-.wrapper {
-  width: 100%;
-  margin: 0 auto;
-  height: 80%;
+.text-left, .text-right {
+  color: black;
 }
 
-.nav-list {
-  padding: 1rem 0;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  color: white;
+footer {
+  background-color: #00bfff;
+  width: 1800px;
+  color: #5e42a6;
 }
 
-.nav-item {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 10;
-  justify-content: right;
-  align-items: right;
-  
+footer a {
+  color: black;
+  text-decoration: none;
 }
 
-.nav-item a {
-  color: green;
-  letter-spacing: 1.2px;
-  
+footer a:hover {
+  text-decoration: underline;
+  color: #5e42a6;
 }
-
-.nav-item:first-child {
-  margin-right: auto;
-  margin-left: 2rem;
-  display: flex;
-  justify-content: right;
-  align-items: right;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-
-.book{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#cover{
-	width: 250px;
-	height: 400px;
-}
-.flip-book{
-	width: 250px;
-	height: 400px;
-	position: relative;
-	perspective: 1500px;
-}
-.flip{
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	transform-origin: left;
-	transform-style: preserve-3d;
-	transform: rotateY(0deg);
-	transition: .5s;
-	color: #000;
-}
-.bienvenue{
-  font-size: 20px;
-	line-height: 24px;
-}
-p{
-	font-size: 14px;
-	line-height: 24px;
-}
-.front{
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 110;
-	left: 0;
-	background-color: #fff;
-	box-sizing: border-box;
-	padding: 0 13px;
-	box-shadow: inset 20px 0 50px rgba(0,0,0,0.5) 0 2px 5px rgba(0,0,0,.5);
-}
-.back{
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	z-index: 99;
-	transform: rotateY(180deg);
-	backface-visibility: hidden;
-	background: #000;
-}
-.next-btn{
-	position: absolute;
-	bottom: 13px;
-	right: 13px;
-	cursor: pointer;
-	color: #000;
-}
-.back-btn{
-	position: absolute;
-	bottom: 13px;
-	right: 13px;
-	cursor: pointer;
-	color: #fff;
-}
-#p1{
-	z-index: 3;
-}
-#p2{
-	z-index: 2;
-}
-#p3{
-	z-index: 1;
-}
-#c1:checked ~ .flip-book #p1{
-	transform: rotateY(-180deg);
-	z-index: 1;
-}
-#c2:checked ~ .flip-book #p2{
-	transform: rotateY(-180deg);
-	z-index: 2;
-}
-#c3:checked ~ .flip-book #p3{
-	transform: rotateY(-180deg);
-	z-index: 3;
-}
-.book input[type="checkbox"] {
-  position: absolute;
-  opacity: 0;
-  z-index: -1;
-  pointer-events: none;
-}
-
-.footer {
-	text-align: center;
-	padding: 10px;
-	background-color: #f1f1f1;
-  }
-  
-  
