--- a/accueil.css
+++ b/accueil.css
@@ -6,8 +6,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  margin: 0;
 }
-
 
 .navbar {
   background-color: #00bfff;
@@ -33,50 +33,56 @@ body {
 
 .form-inline .btn:hover {
   background-color: #ffd700;
+  color: #5e42a6;
 }
 
-h1.display-4 {
+.type {
+  padding-top: 100px; /* Adjust to ensure it's visible under the navbar */
+  text-align: center;
+  color: #5e42a6;
+}
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
   color: #ffd700;
   font-family: fantasy;
 }
 
 h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
   color: #00bfff;
 }
 
-.carousel-item img {
-  object-fit: cover;
-  height: 400px;
-}
-
-.carousel-caption h5 {
-  background-color: rgba(94, 66, 166, 0.7);
-  padding: 10px;
+.btn-primary {
+  background-color: #5e42a6;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  font-size: 1.25rem;
+  margin: 0.5rem;
   border-radius: 5px;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.carousel-caption p {
-  background-color: rgba(0, 191, 255, 0.7);
-  padding: 5px;
-  border-radius: 5px;
-}
-
-.text-left, .text-right {
-  color: black;
-}
-
-footer {
-  background-color: #00bfff;
-  width:auto;
+.btn-primary:hover {
+  background-color: #ffd700;
   color: #5e42a6;
 }
 
-footer a {
+.footer {
+  background-color: #00bfff;
   color: black;
+  padding: 20px 0;
+  width: auto;
+}
+
+.footer a {
+  color: #5e42a6;
   text-decoration: none;
 }
 
-footer a:hover {
+.footer a:hover {
   text-decoration: underline;
   color: #5e42a6;
 }
